--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Google AI Studio App</title>
+    <meta name="google-site-verification" content="JeKzCcg9VaEPBc4Oy4in8-EvheZoj0AlyohoyUSCClI" />
+    <title>TikTok Coins to USD Calculator</title>
   </head>
   <body>
     <div id="root"></div>
